fixing modal bug when it doesn't fit on iPhone 6/5s landscape mode

--- a/src/client/atoms/Modal.scss
+++ b/src/client/atoms/Modal.scss
@@ -40,7 +40,7 @@
   border-radius: pxToRem(3);
   padding: 4rem;
   // margin: 5rem auto auto 4rem;
-  width: 90rem;
+  width: 100%;
   // margin: 5rem auto auto 4rem;
   // width: 100%; //required for IE 11 (at least)
   max-width: 90rem;
